2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* bonobo-config-archiver.c (bonobo_config_archiver_destroy): Don't
	unref the event source or the property bag

	* RELEASE : 1.5.2

2001-07-24  Richard Hestilow  <hestilow@ximian.com>

	* bonobo-config-archiver.c (pb_set_fn): Do sanity checking on
	the rollback ID we get.

2001-07-24  Richard Hestilow  <hestilow@ximian.com>

	* config-log.c (parse_line): Ok, bad fix. Move that to the archiver.

	* bonobo-config-archiver.c (pb_set_fn): Moved here.
	(bonobo_config_archiver_new): Don't aggregate against an EventSource,
	since the PropertyBag already has one and everything will get confused.
	Just use the one the bag has.
	(bonobo_config_archiver_destroy): Don't unref the event source, we
	don't own it any more.	

2001-07-24  Richard Hestilow  <hestilow@ximian.com>

	* config-log.c (parse_line): Fix date parsing to work with DST.

	* bonobo-config-archiver.[ch]: Export a PropertyBag interface that
	has the last_modified date as a read-only property. 

2001-07-24  Bradford Hovinen  <hovinen@ximian.com>

	* bonobo-config-archiver.c (real_sync): Notify listeners with a sync event
	(real_sync): Use correct pointer type when passing to notify_listeners

2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-17  Bradford Hovinen  <hovinen@ximian.com>

	* bonobo-config-archiver.c (bonobo_config_archiver_new): Add
	mechanism for quitting once the moniker is no longer in use
	(bonobo_config_archiver_new): Make archive a static variable
	(bonobo_config_archiver_new): Explicitly destroy archive when
	program quits
	(timeout_cb): Remove

	* config-log.c (slave_apprise_data): Remove

	* archive.c (archive_unregister_location): 
	(archive_get_location): strdup the string to remove compiler warnings

	* location.c (location_store): Use return value
	(location_store_full_snapshot): Use return value

2001-07-12  Bradford Hovinen  <hovinen@ximian.com>
